--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -27,8 +27,10 @@
             <p>Whilst Addy loves writing, his true passion is in helping move the web (even a little) forward. He's a member of the jQuery Core bug triage and docs teams and has also contributed to the open-source library, Modernizr.</p>
             <p>Addy was with us last year also and you can still see his excellent talk, <a href="http://vimeo.com/44100359">JavaScript Decoupling Vs. The World</a>, in our video pool.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Gone in 60 frames per second</h3>
+            <p>What’s stopping your web pages from getting silky smooth scrolling, buttery animation and a user experience that’s snappy and fast? Jank-free rendering performance has been shown to positively affect user engagement and experience in many large sites, but remains an area many are unaware of how to diagnose or optimize.</p>
+            <p>To highlight how widespread rendering is a performance bottleneck, we're going to walk through a detailed case study of Pinterest.com. Learn about common paint issues in modern sites and equally as importantly - how to diagnose them. We'll also look at changes Interest made to get up to a 40% improvement in rendering times.</p>
+            <p>By the end if this session you'll be equipped with the knowledge to see a number of performance diagnosis features in Chrome DevTools to find and fix rendering issues in your own sites.</p>
         </div>
 
         <div class="separator"></div>
@@ -78,11 +80,8 @@
 
             <h3>tus.io - Squeezing Cats Through Tiny Mobile Tubes</h3>
             <p>The internet has a problem. With the rise of HD cameras, videos and images keep getting bigger and bigger. Unfortunately that makes it much harder to upload them through unreliable mobile networks. As a result, millions of cat videos and images are lost due to network errors every year.</p>
-
             <p>The solutions are obvious, but unfortunately there is a distinct lack of interoperable software and protocols to make resumable file uploads a no-brainer for everybody.</p>
-
             <p><a href="http://tus.io">tus.io</a> is an open source project that's here to change this! We are working on an open protocol, along with client and server implementations for all plattforms to make sure no upload will ever be lost in the tubes again.</p>
-
             <p>This talk will go over the technical problems and browser APIs for performing resumable uploads, and also look at improving upload speeds.</p>
         </div>
 
@@ -96,7 +95,6 @@
 
             <h3>contenteditable: Roll for sanity</h3>
             <p>You may have heard that the contenteditable attribute is part of HTML5. Great news! We can edit almost anything, almost anywhere, without needing to swap in a messy-looking textarea.</p> 
-
             <p>However, the history of contenteditable is longer and darker than its most recent implementations. The contenteditable attribute opens the door to a world that has driven developers to madness. We'll talk about the horror - and the power - that lives in the shadows of the browser. We'll go beyond merely replacing text and edit HTML on the fly, work with selected text, and even try to position the cursor.</p>
 
             <p>If our sanity survives, we'll master contenteditable elements.</p>
@@ -122,8 +120,8 @@
             <h2>Magnar Sveen</h2>
             <p>Magnar is a happy frontend developer with a crush on functional programming and lisps. He's done quite a few talks and courses on test-driven JavaScript development, as well as a screencast series on the topic in Norwegian at <a href="http://zombietdd.com">ZombieTDD</a>. He is also the voice behind <a href="http://emacsrocks.com">Emacs Rocks!</a>, and was at the WebRebels 2012 <a href="/openmic/">open-mic night</a> announced as the second coming of Emacs.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Emacs Rocks! Webdev special</h3>
+            <p>A high speed tour through some pretty darn snazzy features of Emacs when developing for the web. Even if you're not looking to change editors any time soon, this talk should have you hacking at your own editor in the following break. </p>
         </div>
 
         <div class="separator"></div>
@@ -145,16 +143,12 @@
             <img class="imageFrame" height="140" width="140" alt="Dr.-Ing. Mario Heiderich" src="../gfx/speaker_mario.jpg">
             <h2>Dr.-Ing. Mario Heiderich</h2>
             <p><a href="http://mario.heideri.ch/">Mario Heiderich</a> is a Microsoft security contractor and founder of the German/UK pen-test outfit <a href="http://cure53.de/">Cure53</a>. He focuses on HTML5, SVG security and believes XSS can be eradicated by using JavaScript. Maybe. Some day.</p>
-
             <p>Mario invoked the <a href="http://html5sec.org/">HTML5 security cheat-sheet</a> and maintains the Crawly project. In his spare time he delivers trainings and security consultancy for larger German and international companies for sweet sweet money and the simple minded fun in breaking things.</p>
-
             <p>Mario has spoken on a large variety of international conferences, co-authored two books, several academic papers and doesn’t see a problem in his one-point-five year old son having a tablet already.</p>
 
             <h3>The innerHTML Apocalypse - How mXSS attacks change everything we believed to know so far</h3>
             <p>This talk introduces and discusses a novel, mostly unpublished technique to attack websites that are applied with state-of-the-art XSS protection. This attack labeled Mutation-XSS (mXSS) is capable of bypassing high-end filter systems by utilizing the browser and its often unknown capabilities - every single one of them.</p>
-
             <p>We analyzed the type and number of websites that are affected by this kind of attack. Several live demos during the presentation will share these impressions and help understanding, what mXSS is, why mXSS is possible and why it is of importance for defenders as well as professional attackers to be understood and researched even further.</p>
-
             <p>The talk wraps up several years of research on this field, shows the abhorrent findings, discusses the consequences and delivers a step-by-step guide on how to protect against this kind of mayhem - with a strong focus on feasibility and scalability.</p>
         </div>
 
@@ -168,7 +162,6 @@
 
             <h3>Minecraft in the browser</h3>
             <p>In January 2013 I started the <a href="http://voxeljs.com">Voxel.js project</a>. Since then we have generated nearly 100 node modules related to 3D game development and distribution, e.g. voxel rendering and first person controls and physics. In the main module (voxel-engine) I've received 50 pull requests from 20 contributors.</p>
-
             <p>I'd like to talk about why voxel.js has been successful from an open source standpoint (open from the beginning) and also show off some fun 3D demos and inspire people to take up game development in JS.</p>
         </div>
 
@@ -179,14 +172,11 @@
             <img class="imageFrame" height="140" width="140" alt="Pawel Kozlowski" src="../gfx/speaker_pawel.jpg">
             <h2>Pawel Kozlowski</h2>
             <p>Pawel Kozlowski enjoys hacking on both back-end and front-end. During his career he was fortunate enough to use multitude of technologies, programming languages and tools but recently focuses on the front-end web development with <a href="http://angularjs.org/">AngularJS</a>.</p>
-
             <p>Pawel strongly believes in free, open source software. He is very active in the AngularJS community and last year he was honored with the commiter privilege to the AngularJS project. He also contributes to <a href="http://angular-ui.github.io/bootstrap/">Angular-UI</a> - the companion suite to the AngularJS framework.</p>
-
             <p>When not coding Pawel sharpens his writing skills and now he finishes a <a href="http://www.packtpub.com/angularjs-web-application-development/book.">book about web application development with AngularJS</a>. You can also find him spreading a good word about AngularJS at various conferences.</p>
 
             <h3>AngularJS: teaching browsers new tricks</h3>
             <p>This talk will familiarize you with AngularJS JavaScript framework and its revolutionary approach to writing single-page web applications. AngularJS is unique in many ways with its DOM-based, declarative templating, ability to extend HTML vocabulary and strong focus on testing.</p>
-
             <p>AngularJS will be introduced by contrasting it with traditional approaches and showing benefits of the AngularJS-way (extremely concise yet readable code, testability and most importantly – making web development fun again!). This will be an interactive talk with plenty of code examples.</p>
         </div>
 
