--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -41,8 +41,11 @@
             <h2>Bodil Stokke</h2>
             <p><a href="http://bodil.org/">Bodil</a> is a developer, frequent speaker and occasional teacher of web technology and the dark realm of Lisp. She is currently leading the web dev team at <a href="http://arktekk.no/">Arktekk</a>. She is best known as the creator of the <a href="http://catnipide.com/">Catnip IDE</a>, and for her contributions to the field of programming language theory, especially the <a href="http://bodil.org/coffeescript/#the-secret-slide">Facial Hair Theory of Language Design</a>. She holds a doctorate in Metaphysics from <a href="http://www.themonastery.org/catalog/drofmetaphysicscertificate-p-116.html">ULC</a>, and her favourite pony is <a href="http://www.youtube.com/watch?v=cDuG95DXbw8">Rainbow Dash</a>.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>What Every Hipster Should Know About Functional Programming</h3>
+            <p>Different programming paradigms serve different purposes. Systems programmers prefer tools that are dumb, imperative and close to the metal. Enterprise programmers prefer tools which foster complexity, increasing billable hours and the client's dependency on the developer.</p>
+            <p>And, let me just come clean and admit it, functional programmers do it for that delicious feeling of superiority that comes from looking down your nose at the normals in their caves banging together for loops and mutable state to make fire.</p>
+            <p>Treat yourself to a crash course in the vocabulary of functional programming: higher order functions, combinators, the infinite opportunities to throw the word "monad" in the face of anyone who thinks an ironic moustache is enough to justify all that self-assured smugness these days. You'll never have to lose a programming argument again once you've learned where to casually toss terms like "applicative functor" and "Kleisli triple" into the conversation.</p>
+            <p>This is the War of the Hipsters. Arm yourself now, before it goes mainstream.</p>
         </div>
 
         <div class="separator"></div>
@@ -96,7 +99,6 @@
             <h3>contenteditable: Roll for sanity</h3>
             <p>You may have heard that the contenteditable attribute is part of HTML5. Great news! We can edit almost anything, almost anywhere, without needing to swap in a messy-looking textarea.</p> 
             <p>However, the history of contenteditable is longer and darker than its most recent implementations. The contenteditable attribute opens the door to a world that has driven developers to madness. We'll talk about the horror - and the power - that lives in the shadows of the browser. We'll go beyond merely replacing text and edit HTML on the fly, work with selected text, and even try to position the cursor.</p>
-
             <p>If our sanity survives, we'll master contenteditable elements.</p>
         </div>
 
