--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -56,8 +56,10 @@
             <h2>David Nolen</h2>
             <p><a href="http://dosync.posterous.com/">David Nolen</a> is a JavaScript developer at The New York Times and helps run the <a href="http://kitchentablecoders.com/">Kitchen Table Coders</a> workshops in Brooklyn. David spends far too much of his free time having fun hacking on <a href="https://github.com/clojure/core.logic">core.logic</a>, <a href="https://github.com/clojure/core.match">core.match</a>, and <a href="https://github.com/clojure/clojurescript">ClojureScript</a>.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>ClojureScript: Lisp's Revenge</h3>
+            <p>More than 55 years ago John McCarthy had an insanely great idea called Lisp. Lisp marked the beginning of functional programming, interpreters, high-level metaprogramming, garbage collection, and much more. Yet after such auspicious beginnings the idea of Lisp has since faded and many of its innovations have been adopted by much more popular programming languages. Until recently Lisp even appeared doomed to fade into obscurity but several things have conspired to make Lisp somewhat cool again - one of these is Clojure, a fun modern Lisp targeting the Java Virtual Machine.</p>
+            <p>However the Web doesn't speak JVM bytecodes. It speaks JavaScript - thus the cornucopia of languages that now compile to JavaScript. The most well known include GWT, CoffeeScript, and more recently Dart and TypeScript. However none of these represent a real break from the status quo.</p>
+            <p>John McCarthy's insanely great idea still has a lot to offer the Web and we'll see how with ClojureScript, an implementation of Clojure that targets JavaScript.</p>
         </div>
 
         <div class="separator"></div>
@@ -97,7 +99,7 @@
             <p><a href="http://garann.com/">Garann</a> is a JavaScript developer from Austin, Texas, USA. Before switching back to the front-end, she worked for many years as a back-end and full-stack developer. She is the author of <a href="http://shop.oreilly.com/product/0636920023258.do">Node for Front-End Developers</a>, and is the organizer of <a href="http://www.meetup.com/Austin-All-Girl-Hack-Night/">Austin All-Girl Hack Night</a> and <a href="http://www.meetup.com/Girl-Develop-It-Austin/">Girl Develop It Austin</a>.</p>
 
             <h3>contenteditable: Roll for sanity</h3>
-            <p>You may have heard that the contenteditable attribute is part of HTML5. Great news! We can edit almost anything, almost anywhere, without needing to swap in a messy-looking textarea.</p> 
+            <p>You may have heard that the contenteditable attribute is part of HTML5. Great news! We can edit almost anything, almost anywhere, without needing to swap in a messy-looking textarea.</p>
             <p>However, the history of contenteditable is longer and darker than its most recent implementations. The contenteditable attribute opens the door to a world that has driven developers to madness. We'll talk about the horror - and the power - that lives in the shadows of the browser. We'll go beyond merely replacing text and edit HTML on the fly, work with selected text, and even try to position the cursor.</p>
             <p>If our sanity survives, we'll master contenteditable elements.</p>
         </div>
