adding Firefox App day details

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -215,8 +215,53 @@
                 <th colspan="3">25th of May - Firefox OS Application Hack Day</th>
             </tr>
             <tr>
-                <td>Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">Firefox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
+                <td colspan="3">
+                <p>As part of the Web Rebels conference, Comoyo is hosting an App Day where you can get an introduction to Firefox OS, how to make web apps, design guidelines etc.</p>
+                <p>Bring your existing app or web site to adapt it to a web app, or start a new project. From those who <a href="https://docs.google.com/a/comoyo.com/spreadsheet/viewform?formkey=dHpNbXZHenh3eS1vVW9TOVFKWDIxQUE6MA#gid=0">register an app idea</a> they want to work on, we will draw some lucky winners who get a <a href="http://www.geeksphone.com/">Geeksphone</a> with Firefox OS on!</p>
+                <p>You do not need a ticket for the Web Rebels conference to participate in the App Day, as it is open to everyone!</p>
+                <p>Wanna get started building your app in advance? <a href="http://comoyo.github.io/blog/2013/03/12/build-first-ffos-app/">Here's how to get started</a>.</p>
+                </td>
             </tr>
+            <tr>
+                <td class="time">10:00</td>
+                <td class="title">Coffee and registration</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">10:30</td>
+                <td class="title">Intro to Firefox OS and Mozilla's plans</td>
+                <td class="additional"><a href="http://christianheilmann.com/">Christian Heilmann</a>,  Developer Evangelist at Mozilla</td>
+            </tr>
+            <tr>
+                <td class="time">11:30</td>
+                <td class="title">How to make you first Firefox OS app</td>
+                <td class="additional"><a href="https://twitter.com/janjongboom">Jan Jongboom</a>, Developer in Comoyo's Firefox OS team</td>
+            </tr>
+            <tr>
+                <td class="time">12:15</td>
+                <td class="title">Showcasing the possibilities with HTML5</td>
+                <td class="additional">
+                    <b>Gaming in HTML5</b>: how to use the WebGL standard to create graphically rich browser-based games without requiring the user to install any plug-ins by Marcus Stenberg, Evangelist at Goo Technologies
+                </td>
+            </tr>
+            <tr>
+                <td class="time">13:00</td>
+                <td class="title">Lunch</td>
+                <td class="additional"> </td>
+            </tr>
+            <tr>
+                <td class="time">13:30</td>
+                <td class="title">Work on your app with help from Mozilla and Comoyo mentors. </td>
+                <td class="additional"><a href="https://docs.google.com/a/comoyo.com/spreadsheet/viewform?formkey=dHpNbXZHenh3eS1vVW9TOVFKWDIxQUE6MA#gid=0">Register your app idea here</a> in advance and you might win a Geeksphone!</td>
+            </tr>
+            <tr>
+                <td class="time">16:00</td>
+                <td class="title">Optional beer drinking in the Mesh Café</td>
+                <td class="additional"> </td>
+            </tr>            
+            <!--tr>
+                <td colspan="3">Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">Firefox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
+            </tr-->
         </table>
 
     </article>
