adjusted the ff app schedule thing..

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -224,8 +224,7 @@
             </tr>
             <tr>
                 <td class="time">10:00</td>
-                <td class="title">Coffee and registration</td>
-                <td class="additional"> </td>
+                <td class="title" colspan="2">Coffee and registration</td>
             </tr>
             <tr>
                 <td class="time">10:30</td>
@@ -246,8 +245,7 @@
             </tr>
             <tr>
                 <td class="time">13:00</td>
-                <td class="title">Lunch</td>
-                <td class="additional"> </td>
+                <td class="title" colspan="2">Lunch</td>
             </tr>
             <tr>
                 <td class="time">13:30</td>
@@ -256,8 +254,7 @@
             </tr>
             <tr>
                 <td class="time">16:00</td>
-                <td class="title">Optional beer drinking in the Mesh Café</td>
-                <td class="additional"> </td>
+                <td class="title" colspan="2">Optional beer drinking in the <a href="https://www.google.com/search?q=Mesh+Caf%C3%A9&oq=Mesh+Caf%C3%A9&aqs=chrome.0.57j0l3.603j0&sourceid=chrome&ie=UTF-8">Mesh Café</a></td>
             </tr>            
             <!--tr>
                 <td colspan="3">Our main sponsor, Comoyo, will host a full day <a href="http://www.mozilla.org/en-US/firefox/partners/#os">Firefox OS</a> application hack day. Full schedule with speakers, activities and location for this event will be published later.</td>
