--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,28 +1,30 @@
 <footer class="foot">
     <div class="footContainer">
-
+    <section class="sponsors premium">
+        <a class="sponsor microsoft" href="http://microsoft.com"></a>
+        <a class="sponsor comoyo" href="http://comoyo.no"></a>
+        <a class="sponsor bouvet" href="http://bouvet.no"></a>        
+    </section>
+    <aside>
+        <a href="http://webrebels.tumblr.com">Tumblr</a>
+        <a href="http://flickr.com/webrebels">Flickr</a>
+        <a href="http://lanyrd.com/2013/webreb/">Lanyrd</a>
+        <a href="https://vimeo.com/channels/wr2012">Vimeo</a>
+        <a href="https://twitter.com/web_rebels">Twitter</a>
+    </aside>
+    
         <section class="sponsors">
             <a class="sponsor kodemaker" href="http://kodemaker.no"></a>
             <a class="sponsor arktekk" href="http://arktekk.no"></a>
             <a class="sponsor finn" href="http://finn.no"></a>
             <a class="sponsor bekk" href="http://bekk.no"></a>
-            <a class="sponsor comoyo" href="http://comoyo.no"></a>
             <a class="sponsor knowit" href="http://knowit.no"></a>
-            <a class="sponsor bouvet" href="http://bouvet.no"></a>
-            <a class="sponsor microsoft" href="http://microsoft.com"></a>
             <a class="sponsor computas" href="http://computas.com"></a>
             <a class="sponsor amedia" href="http://utvikling.amedia.no/"></a>
             <a class="sponsor couch" href="http://couchdb.apache.org/"></a>
             <a class="sponsor github" href="http://github.com/"></a>
         </section>
 
-        <aside>
-            <a href="http://webrebels.tumblr.com">Tumblr</a>
-            <a href="http://flickr.com/webrebels">Flickr</a>
-            <a href="http://lanyrd.com/2013/webreb/">Lanyrd</a>
-            <a href="https://vimeo.com/channels/wr2012">Vimeo</a>
-            <a href="https://twitter.com/web_rebels">Twitter</a>
-        </aside>
     </div>
 </footer>
 <div id="surprompen">
