--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -30,13 +30,13 @@
             </tr>
             <tr>
                 <td class="time">Talk I</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title">Joachim Haagen Skeie</td>
+                <td class="additional">Ember.js in Action</td>
             </tr>
             <tr>
                 <td class="time">Talk II</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title">Arne Martin Aurlien</td>
+                <td class="additional">Implementing an esoteric programming language in JavaScript</td>
             </tr>
             <tr>
                 <td class="time">Talk III</td>
@@ -77,13 +77,13 @@
             </tr>
             <tr>
                 <td class="time">09:00</td>
-                <td class="title">Talk I</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#reginald">Reginald Braithwaite</a></td>
+                <td class="additional">tba</td>
             </tr>
             <tr>
                 <td class="time">09:45</td>
-                <td class="title">Talk II</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#addy">Addy Osmani</a></td>
+                <td class="additional">Gone in 60 frames per second</td>
             </tr>
             <tr>
                 <td class="time">10:30</td>
@@ -92,13 +92,13 @@
             </tr>
             <tr>
                 <td class="time">11:00</td>
-                <td class="title">Talk III</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#pawel">Pawel Kozlowski</a></td>
+                <td class="additional">AngularJS: teaching browsers new tricks</td>
             </tr>
             <tr>
                 <td class="time">11:45</td>
-                <td class="title">Talk IV</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#bodil">Bodil Stokke</a></td>
+                <td class="additional">What Every Hipster Should Know About Functional Programming</td>
             </tr>
             <tr>
                 <td class="time">12:30</td>
@@ -107,13 +107,13 @@
             </tr>
             <tr>
                 <td class="time">13:30</td>
-                <td class="title">Talk V</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#jan">Jan Lehnardt</a></td>
+                <td class="additional">tba</td>
             </tr>
             <tr>
                 <td class="time">14:15</td>
-                <td class="title">Talk VI</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#dominic">Dominic Tarr</a></td>
+                <td class="additional">tba</td>
             </tr>
             <tr>
                 <td class="time">15:00</td>
@@ -122,13 +122,13 @@
             </tr>
             <tr>
                 <td class="time">15:30</td>
-                <td class="title">Talk VII</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#rob">Rob Hawkes</a></td>
+                <td class="additional">The State of WebRTC</td>
             </tr>
             <tr>
                 <td class="time">16:15</td>
-                <td class="title">Talk VIII</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#max">Max Ogden</a></td>
+                <td class="additional">Minecraft in the browser</td>
             </tr>
             <tr>
                 <td class="time">17:00</td>
@@ -149,13 +149,13 @@
             </tr>
             <tr>
                 <td class="time">09:00</td>
-                <td class="title">Talk I</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#robert">Robert Nyman</a></td>
+                <td class="additional">What are you going to do with your life?</td>
             </tr>
             <tr>
                 <td class="time">09:45</td>
-                <td class="title">Talk II</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#marius">Marius Gundersen</a></td>
+                <td class="additional">tba</td>
             </tr>
             <tr>
                 <td class="time">10:30</td>
@@ -164,13 +164,13 @@
             </tr>
             <tr>
                 <td class="time">11:00</td>
-                <td class="title">Talk III</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#garann">Garann Means</a></td>
+                <td class="additional">contenteditable: Roll for sanity</td>
             </tr>
             <tr>
                 <td class="time">11:45</td>
-                <td class="title">Talk IV</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#mario">Dr.-Ing. Mario Heiderich</a></td>
+                <td class="additional">The innerHTML Apocalypse - How mXSS attacks change everything we believed to know so far</td>
             </tr>
             <tr>
                 <td class="time">12:30</td>
@@ -179,13 +179,13 @@
             </tr>
             <tr>
                 <td class="time">13:30</td>
-                <td class="title">Talk V</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#david">David Nolen</a></td>
+                <td class="additional">ClojureScript: Lisp's Revenge</td>
             </tr>
             <tr>
                 <td class="time">14:15</td>
-                <td class="title">Talk VI</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#felix">Felix Geisendörfer</a></td>
+                <td class="additional">tus.io - Squeezing Cats Through Tiny Mobile Tubes</td>
             </tr>
             <tr>
                 <td class="time">15:00</td>
@@ -194,13 +194,13 @@
             </tr>
             <tr>
                 <td class="time">15:30</td>
-                <td class="title">Talk VII</td>
-                <td class="additional"> </td>
+                <td class="title">tba</td>
+                <td class="additional">tba</td>
             </tr>
             <tr>
                 <td class="time">16:15</td>
-                <td class="title">Talk VIII</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="/speakers/#magnar">Magnar Sveen</a></td>
+                <td class="additional">Emacs Rocks! Webdev special</td>
             </tr>
             <tr>
                 <td class="time">17:00</td>
