--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -136,8 +136,10 @@
             <h2>Marius Gundersen</h2>
             <p>Marius Gundersen is a frontend consultant with Ciber Norge AS, where he focuses on web and mobile development. Marius has more than a decades experience tinkering and playing with web technology, and enjoys sharing his knowledge through talks and presentations. More information on the projects he has worked on can be found at <a href="http://mariusgundersen.net">his website</a>.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>Building Maintainable JavaScript Applications</h3>
+            <p>How long can a JavaScript app live without being maintained? How long until the browsers it was designed for is outdated? How long until bugs have to be fixed or new functionality is needed? And will the developer tasked with these jobs remember or understand how the application works?</p>
+            <p>Writing JavaScript code is fast and easy, but reading that code is often slow and difficult. By writing code which is easy to read and understand we get an application which is straight forward to debug and improve. This makes the application maintainable, and now anyone can go in and quickly fix or extend it.</p>
+            <p>In this talk I want to focus on maintainable JavaScript applications. Together we will write a such an application using a collection of frameworks including Knockout.js and Require.js. We will look at some of the high and low level principles of maintainable code and how the architecture of our client side app can help make it easy to read, understand, debug and test. </p>
         </div>
 
         <div class="separator"></div>
@@ -194,6 +196,18 @@
 
             <h3>Topic:</h3>
             <p>To be revealed soon!</p>
+        </div>
+
+        <div class="separator"></div>
+
+        <a name="rob"></a>
+        <div class="speaker">
+            <img class="imageFrame" height="140" width="140" alt="Rob Hawkes" src="../gfx/speaker_rob.jpg">
+            <h2>Rob Hawkes</h2>
+            <p>Rob loves solving problems through code. He’s a Digital Tinkerer, former Technical Evangelist at Mozilla, author of Foundation HTML5 Canvas, and a Brit. You can find out more about him on <a href="http://twitter.com/robhawkes">Twitter</a> and his <a href="http://rawkes.com">blog</a>.</p>
+
+            <h3>The State of WebRTC</h3>
+            <p>WebRTC brings peer-to-peer networking to the browser. But what is it? How does it work? How do you use it? And what are others doing with it? In this talk, Rob covers the current state of WebRTC, outlines how to use it, and shows off some of the amazing things that it can do beyond video chat.</p>
         </div>
 
         <div class="separator"></div>
