--- a/views/frontpage.ejs
+++ b/views/frontpage.ejs
@@ -121,10 +121,10 @@
             </a>
         </article>
 
-        <article class="slot row_c tba">
-            <a href="/speakers/#">
-                <div class="img"></div>
-                <h2>tba</h2>
+        <article class="slot row_c">
+            <a href="/speakers/#rob">
+                <div class="img" style="background-image: url(/gfx/front_rob.jpg);"></div>
+                <h2>Rob Hawkes</h2>
             </a>
         </article>
 
