--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -155,7 +155,7 @@
             <tr>
                 <td class="time">09:45</td>
                 <td class="title"><a href="/speakers/#marius">Marius Gundersen</a></td>
-                <td class="additional">tba</td>
+                <td class="additional">Building Maintainable JavaScript Applications</td>
             </tr>
             <tr>
                 <td class="time">10:30</td>
