--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -290,7 +290,31 @@
                 <td class="flight">SK4703</td>
                 <td class="from">Oslo, Gardermoen</td>
                 <td class="arrivaltime">21:45</td>
-                <td class="to"> Nice, Cote D'Azur</td>
+                <td class="to">Nice, Cote D'Azur</td>
+            </tr>
+            <tr class="accommodation">
+                <td class="location" colspan="6">Vulcan Scandic Hotel</td>
+            </tr>
+
+
+            <tr class="speaker">
+                <td class="name" colspan="6">Rob Hawkes:</td>
+            </tr>
+            <tr class="inbound">
+                <td class="date">22.05</td>
+                <td class="departtime">10:20</td>
+                <td class="flight">SK804</td>
+                <td class="from">London, Heathrow</td>
+                <td class="arrivaltime">13:30</td>
+                <td class="to">Oslo, Gardermoen</td>
+            </tr>
+            <tr class="outbound">
+                <td class="date">25.05</td>
+                <td class="departtime">13:15</td>
+                <td class="flight">SK805</td>
+                <td class="from">Oslo, Gardermoen</td>
+                <td class="arrivaltime">14:35</td>
+                <td class="to">London, Heathrow</td>
             </tr>
             <tr class="accommodation">
                 <td class="location" colspan="6">Vulcan Scandic Hotel</td>
