updating sponsor info about microsoft

--- a/views/snips/footer.ejs
+++ b/views/snips/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="foot">
     <div class="footContainer">
     <section class="sponsors premium">
-        <a class="sponsor microsoft" href="http://microsoft.com"></a>
+        <a class="sponsor microsoft" href="http://bit.ly/iemodern"></a>
         <a class="sponsor comoyo" href="http://comoyo.no"></a>
         <a class="sponsor bouvet" href="http://bouvet.no"></a>        
     </section>
