--- a/public/css/style.css
+++ b/public/css/style.css
@@ -253,6 +253,12 @@ td ul {
     background-size:                80%;
     background-color:               rgb(255, 255, 255);
 }
+.sponsorLogo.microsoft {
+    background:                     url("/gfx/sponsors/sponsor-microsoft.png") no-repeat center center;
+    background-size:                80%;
+    background-color:               rgb(255, 255, 255);
+}
+
 
 /* Frontpage */
 .poster {
