--- a/views/sponsors.ejs
+++ b/views/sponsors.ejs
@@ -28,6 +28,13 @@
             or read more about <a href="/sponsoroptions">our sponsoring options</a>.
         </p>
 
+        <div class="separator"></div>
+
+        <a class="sponsorLogo microsoft" href="http://bit.ly/iemodern"></a>
+
+        <p>Internet Explorer 10 is one web platform that provides two browsing experiences: the new Windows Internet Explorer in the new Windows UI optimized for touch devices, and the traditional browsing experience of Internet Explorer for the desktop. As a Windows Store app, Internet Explorer 10 runs without plug-ins so that you have a clean, fast, and secure web browsing experience, though it does provide a native Flash player. By removing plug-in dependencies from their sites and opting instead for analogous standards-based technologies, web developers can benefit from better site interoperability and easier maintenance.</p>
+        <p>Internet Explorer invests heavily in tools that help developers build for Internet Explorer and other browsers. Modern.IE is one such tool that detects common coding practices that may cause compatibility problems or prevent your users from getting the best possible experience on a webpage. Whenever possible <a href="http://bit.ly/iemodern">Modern.IE</a> suggests a fix or enhancement with web standards like HTML5 & CSS3 (or a graceful fallback). It's not a complete checklist for coding the modern web – just a starting point so you can spend less time testing for IE and more time building what matters on the web.</p>
+
 
         <div class="separator"></div>
 
