adding IE competition info

--- a/views/tickets.ejs
+++ b/views/tickets.ejs
@@ -16,10 +16,21 @@
         <article class="wrap">
 
             <h1>Tickets</h1>
-            <p>Web Rebels 2013 is sold out!</p>
-
+            <p>Web Rebels 2013 is sold out, but you still have a chance to join us!</p>
+            
+            <h1>Win a Web Rebels ticket from Internet Explorer</h1>
+            <p>Internet Explorer is giving you the opportunity to win a ticket to the event by entering the ModernIE contest! All you need to do is test a website you manage or have helped build in the <a href="http://bit.ly/iemodern">ModernIE tool</a> and send us the report. Modern.IE also gives you three months of free access to BrowserStack.</p>
+            <h2>How to enter the contest:</h2>
+            <ol>
+                <li>Enter the URL of your site into the <a href="http://bit.ly/iemodern">ModernIE tool</a></li>
+                <li>Download the report</li>
+                <li>Email the report to <a href="mailto:anjensen@microsoft.com">anjensen@microsoft.com</a></li>
+            </ol>
+            <p>The two sites with the least errors will be chosen as winners, and those who submitted the reports will receive one ticket each.</p>
+            <p>Deadline to submit your Modern.IE report: <strong>May 20th, 2013</strong>.</p>
+<!--
             <div style="width:100%; text-align:left;"><iframe  src="http://www.eventbrite.com/tickets-external?eid=3153505219&ref=etckt&v=2" frameborder="0" height="320" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe></div>
-
+-->
             <div class="separator"></div>
 
             <h2>This is included in your ticket</h2>
