--- a/views/roadbook.ejs
+++ b/views/roadbook.ejs
@@ -33,7 +33,10 @@
         <div class="separator"></div>
 
         <h2>The hotel</h2>
-        <p>Info</p>
+        <p>Your hotel is the <a href="http://www.scandichotels.com/Hotels/Countries/Norway/Oslo/Hotels/Vulkan/">Scandic Vulcan Hotel</a>.</p>
+        <p>The address to the hotel is: Maridalsveien 13 A, 0175 Oslo</p>
+        <p>The phone number to the hotel is: +47 21 05 71 00</p>
+        <p>Your room is booked in your name.</p>
 
         <div class="separator"></div>
 
