--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -78,7 +78,7 @@
             <tr>
                 <td class="time">09:00</td>
                 <td class="title"><a href="/speakers/#reginald">Reginald Braithwaite</a></td>
-                <td class="additional">tba</td>
+                <td class="additional">I have a good feeling about this.</td>
             </tr>
             <tr>
                 <td class="time">09:45</td>
