--- a/views/speakers.ejs
+++ b/views/speakers.ejs
@@ -24,7 +24,7 @@
             <img class="imageFrame" height="140" width="140" alt="Addy Osmani" src="../gfx/speaker_addy.jpg">
             <h2>Addy Osmani</h2>
             <p><a href="https://twitter.com/addyosmani">Addy</a> is a Developer Programs Engineer at Google who prolifically speaks and writes about JavaScript on a weekly basis. His material covers everything from building large-scale applications to using polyfills to bring the web's latest hotness to older browsers.</p>
-            <p>Whilst Addy loves writing, his true passion is in helping move the web (even a little) forward. He's a member of the jQuery Core bug triage and docs teams and has also contributed to the open-source library, Modernizr.</p>
+            <p>Whilst Addy loves writing, his true passion is in helping move the web (even a little) forward. He's the lead engineer on Yeoman, contributes to Bower and has created projects like TodoMVC, Aura and Basket.js.</p>
             <p>Addy was with us last year also and you can still see his excellent talk, <a href="http://vimeo.com/44100359">JavaScript Decoupling Vs. The World</a>, in our video pool.</p>
 
             <h3>Gone in 60 frames per second</h3>
@@ -194,8 +194,8 @@
             <h2>Reginald Braithwaite</h2>
             <p><a href="http://braythwayt.com/">Reginald Braithwaite</a> has more than twenty years of hands-on experience creating software products. He applies his Ruby, JavaScript, CoffeeScript, and advanced programming expertise to crafting well-factored and maintainable code. He speaks and <a href="https://github.com/raganwald/homoiconic">writes</a> about not-so-big design and dynamic meta-programming. Open source accomplishments include <a href="http://recursiveuniver.se/docs/cafeaulife.html">Cafe au Life</a> and <a href="https://github.com/raganwald/YouAreDaChef">YouAreDaChef</a>, in JS/CS, the <a href="http://andand.rubyforge.org/">andand gem for Ruby</a>, and the <a href="https://github.com/raganwald/JQuery-Combinators">jQuery Combinators plugin</a>.</p>
 
-            <h3>Topic:</h3>
-            <p>To be revealed soon!</p>
+            <h3>I have a good feeling about this - Why tooling is poised to make the jump to hyperspace.</h3>
+            <p>Historically, application and tooling capabilities have advanced in tandem. Today, application technology has progressed far ahead of tooling technology in areas such as collaboration, big data, and social scale. There's a large and exciting opportunity to advance tooling and bring balance to the technology force.</p>
         </div>
 
         <div class="separator"></div>
