adding sindres talk to openmic

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -40,8 +40,8 @@
             </tr>
             <tr>
                 <td class="time">Talk III</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title">Sindre Sørhus</td>
+                <td class="additional">Getting dirty with grunt. Basically; grunt - what, how and why. </td>
             </tr>
             <tr>
                 <td class="time">Break</td>
