added talk by raymond

--- a/views/schedule.ejs
+++ b/views/schedule.ejs
@@ -30,28 +30,28 @@
             </tr>
             <tr>
                 <td class="time">Talk I</td>
-                <td class="title">Joachim Haagen Skeie</td>
+                <td class="title"><a href="https://twitter.com/joachimhs">Joachim Haagen Skeie</a></td>
                 <td class="additional">Ember.js in Action</td>
             </tr>
             <tr>
                 <td class="time">Talk II</td>
-                <td class="title">Arne Martin Aurlien</td>
+                <td class="title"><a href="https://twitter.com/arnemart/">Arne Martin Aurlien</a></td>
                 <td class="additional">Implementing an esoteric programming language in JavaScript</td>
             </tr>
             <tr>
                 <td class="time">Talk III</td>
-                <td class="title">Sindre Sørhus</td>
+                <td class="title"><a href="https://twitter.com/sindresorhus">Sindre Sørhus</a></td>
                 <td class="additional">Getting dirty with grunt. Basically; grunt - what, how and why. </td>
             </tr>
             <tr>
                 <td class="time">Break</td>
-                <td class="title"></td>
+                <td class="title"> </td>
                 <td class="additional"> </td>
             </tr>
             <tr>
                 <td class="time">Talk IV</td>
-                <td class="title">tba</td>
-                <td class="additional"> </td>
+                <td class="title"><a href="https://twitter.com/Nervetattoo">Raymond Julin</a></td>
+                <td class="additional">What the hell happened to hacking?<br> The landscape of javascript hacking has changed. How has this changed the meta stuff you go through to set up a new open source project? I'll cheekily go through the somewhat crazy steps that can exist in fully meta defining/configuring your project, and make a point, that while all these helping tools are actually helping, it does with no doubt appear batshit crazy seen a little from the outside.</td>
             </tr>
             <tr>
                 <td class="time">Talk V</td>
